<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LetsGO</string>
    <string name="action_settings">Settings</string>
    <string name="lblUserName">Registered mobile number</string>
    <string name="lblPassword">Password</string>
    <string name="btnSubmit">Login</string>
    <string name="btnSingUp">Sing Up</string>
    <string name="title_activity_register">User Registration</string>
    <string name="lblFName">First Name</string>
    <string name="lblLName">Last Name</string>
    <string name="lblGender">Gender</string>
    <string name="genderMale">M</string>
    <string name="genderFemale">F</string>
    <string name="lblAge">Age</string>
    <string name="lblContactNo">Mobile No</string>
    <string name="lblRegister">I Agree</string>
    <string name="lblError">Error</string>
    <string name="lblErrorUserExist">This mobile no is already exist.</string>
    <string name="lblErrorUserNotExist">Login failed. Please check your credential.</string>
    <string name="lblErrorTechnical">Technical error occurred. Please try again</string>
    <string name="lblGoToLoginBtn">Go back to login screen</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home_page">Travel Detail List</string>
    <string name="btnNewTravelPlan">New plan</string>
    <string name="title_activity_travel_plan">Enter Travel Details</string>
    <string name="lblCurrentLoc">Current Location</string>
    <string name="lblCurLocNotfound">Current Location not found</string>
    <string name="lblStartLoc">Start Location</string>
    <string name="lblEndLoc">End Location</string>
    <string name="lblTravelTime">Starting time</string>
    <string name="lblTravelMode">Mode of Travel</string>
    <string name="lblNoOfPassenger">Total Person</string>
    <string name="ddTravelType">Select Travel Mode</string>
    <string name="btnTravelSubmit">Submit</string>
    <string name="lblUserDetails">User Details</string>
    <string name="lblTravelDetails">Travel Details</string>
    <string name="btnConfimTravel">Confirm</string>
    <string name="lblTermCondition">I have read and agree to <a href="#">terms and condition </a> for using this app</string>
    <string name="lblLoginInformation">If you already registered, please login with registered mobile number. otherwise click on "Sign Up" for register yourself.</string>
    <string name="ddSelLocation">Select location</string>
    <string name="btnDeleteTravel">Delete</string>
    <string name="titleConfirmBox">Confirm</string>
    <string name="lblPlanDeleteMsg">Are you sure, you want to delete your plan?</string>
    <string name="lblYes">Yes</string>
    <string name="lblNo">No</string>
    <string name="lblTravelerName">Traveler Name</string>
    <string name="lblTravelerTimeMode">Travel Time/Mode</string>
    <string name="btnShowMobileNo">Call</string>
    <string name="titleShowMobileBox">Mobile Information</string>
    <string name="lblToCall">Call</string>
    <string name="lblCity">City</string>
    <string name="ddSelCity">Select city</string>
    <string name="lblBtnRefresh">Refresh</string>
    <string name="lblErrorForSameLocation">Start location and end location can not be same.</string>
    <string name="title_activity_location_locator">Location Locator</string>
	<string name="str_atv_places">Enter Place Here</string>
	<string name="lblSubLocality">Sub Locality</string>
	<string name="lblLocality">Locality</string>
	<string name="lblOK">OK</string>
</resources>
