<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

   <TextView
	    android:id="@+id/lblLoginErrorMsg"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/tblUserLogin"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:text="@string/lblError"
	    android:textColor="#FF0000"
	    android:visibility="visible" />

    <TableLayout
        android:id="@+id/tblUserLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblLoginErrorMsg"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
       	android:paddingBottom="10dp"
        android:orientation="horizontal" >
        
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            
            <TextView
		        android:id="@+id/lblLogin"
				android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".65"
		        android:text="@string/lblUserName"
				/>
             
             <EditText
		        android:id="@+id/txtLogin"
	        	android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
		        android:ems="10"
		        android:inputType="text" >
		        <requestFocus />
			</EditText>
         </TableRow>  
         <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView 
                android:id="@+id/lblLoginInformation"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:text="@string/lblLoginInformation"
                />
        </TableRow>
    </TableLayout>
	
    	
	

    <!-- 
	<TextView
        android:id="@+id/lblPassword"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lblLogin"
        android:layout_below="@+id/txtLogin"
        android:layout_marginTop="18dp"
        android:text="@string/lblPassword"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/lblPassword"
        android:layout_alignBottom="@+id/lblPassword"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="text|textPassword" />
     -->

    <Button
        android:id="@+id/btnSingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnLoginSubmit"
        android:layout_alignBottom="@+id/btnLoginSubmit"
        android:layout_centerHorizontal="true"
        android:text="@string/btnSingUp" />

    <Button
        android:id="@+id/btnLoginSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tblUserLogin"
        android:layout_below="@+id/tblUserLogin"
        android:text="@string/btnSubmit" />

</RelativeLayout>
